--- a/Projects/todo-list/index.html
+++ b/Projects/todo-list/index.html
@@ -11,6 +11,8 @@
         <h1>My To-Do List 📝</h1>
         <input type="text" id="taskInput" placeholder="Add a new task">
         <button id="addBtn">Add Task</button>
+        <button onclick="editTask(this)">Edit</button>
+
         <ul id="taskList"></ul>
     </div>
 
